Finish appendices - DONE

--- a/report/report.tex
+++ b/report/report.tex
@@ -33,9 +33,9 @@
 
 %%%%% Begin Abstract (Vertically Centered) %%%%%
 \clearpage
-\vspace*{\fill}
+%\vspace*{\fill}
 \input{tex/abstract.tex}
-\vspace*{\fill}
+%\vspace*{\fill}
 
 %%%%% Begin Main Sections %%%%%
 \clearpage
